Added Edits to Page

--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -55,6 +55,11 @@
     max-width: 60rem;
 }
 
+/*color language */
+.languageColor{
+    color: #ffff00;
+}
+
 .name, .email, .msg{
     font-size: medium;
     width: 100%;
