--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -11,6 +11,11 @@
     
 }
 
+/*language computer color layout */
+.languageColor{
+    color:#ffff00
+}
+
 .skillTitle{
     font-size: 3rem;
     font-weight: 600;
