--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -44,6 +44,11 @@
     font-size: medium;
     font-weight: 300;
     letter-spacing: 1px;
+    font-size: medium;
+    font-weight: 300;
+    letter-spacing: 1px;
+    width: 472px;
+    text-align: left;
 }
 
 .btn{
@@ -52,12 +57,14 @@
     padding: 0.75rem 1.5rem;
     border: none;
     border-radius: 2rem;
+    cursor: pointer;
 }
 
 .btnImg{
     object-fit: cover;
     margin: 0 0.25rem;
     height: 1rem;
+    cursor: pointer;
 }
 
 /*mobile view*/
