--- a/src/components/Works/works.css
+++ b/src/components/Works/works.css
@@ -31,6 +31,25 @@
     max-width: 65rem;
 }
 
+.imgOverlay {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-align: center;
+  }
+  
+  .worksImgContainer:hover .worksImg {
+    filter: brightness(0.8);
+    cursor: pointer;
+  }
+
 
 
 .worksImg {
