--- a/src/components/Works/works.css
+++ b/src/components/Works/works.css
@@ -1,3 +1,4 @@
+
 #works{
     margin: 0 auto;
     min-height: calc(100vh - 4rem);
@@ -38,11 +39,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(3, 3, 3, 0.5);
     align-items: center;
     justify-content: center;
-    color: white;
+    color: #ffff00;
     text-align: center;
+    font-weight: 300;
+    font-size: larger;
   }
   
   .worksImgContainer:hover .worksImg {
@@ -50,6 +53,17 @@
     cursor: pointer;
   }
 
+
+  .worksImgContainer {
+    position: relative;
+  }
+  
+  .worksImgContainer:hover .imgOverlay {
+    display: flex;
+  }
+  
+  
+  
 
 
 .worksImg {
